# ai-rs

./: .gitignore  Cargo.toml  Makefile
crates/ai/: Cargo.toml
crates/ai/src/: lib.rs
crates/ai/src/generate_text/: collect_tool_approvals.rs  content_part.rs  execute_tool_call.rs  generate_text.rs  mod.rs  tool_call.rs  tool_error.rs  tool_output.rs  tool_result.rs  tool_set.rs
crates/ai/src/types/: json_value.rs  language_model.rs  mod.rs  provider_metadata.rs
crates/anthropic/src/: lib.rs
crates/anthropic/src/client/: client.rs
crates/gateway/: Cargo.toml
crates/gateway/src/: gateway_language_model_settings.rs  lib.rs
crates/gemini/: Cargo.toml
crates/openai/: Cargo.toml
crates/openai/src/: clients.rs  types.rs
crates/provider/: Cargo.toml
crates/provider/src/: language_models.rs  lib.rs
crates/provider/src/errors/: api_call_error.rs  client_error.rs  empty_response_body_error.rs  generate_text_error.rs  get_error_message.rs  invalid_argument_error.rs  invalid_prompt_error.rs  invalid_response_data_error.rs  json_parse_error.rs  load_api_key_error.rs  load_setting_error.rs  mod.rs  no_content_generated.rs  no_such_model_error.rs  sdk_errors.rs  too_many_embedding_values_for_call_error.rs  type_validation_error.rs  unsupported_functionality_error.rs
crates/provider/src/json_value/: is_json.rs  json_value.rs  mod.rs
crates/provider/src/language_model/v3/: language_model_v3_source.rs  mod.rs
crates/provider/src/traits/: generate_text.rs
crates/provider/src/utils/: is_async_iterable.rs  mod.rs  schema.rs
crates/xai/: Cargo.toml
(+24 files in other folders)
