[workspace]
resolver = "2"
members = [
  "crates/ai",
  "crates/anthropic",
  "crates/gemini",
  "crates/openai", 
  "crates/provider",
  "crates/xai",
]

[workspace.lints.rust]
unsafe_code = "deny"

[profile.release]
opt-level = 3

[profile.production]
inherits = "release"
lto = "fat"
codegen-units = 1

[profile.profiling]
inherits = "release"
debug = true
