[package]
name = "ai"
version = "0.1.0"
edition = "2024"

[dependencies]
anthropic = { path = "../anthropic" }
gemini = { path = "../gemini" }
openai = { path = "../openai" }
provider = { path = "../provider" }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1", features = ["full"] }
xai = { path = "../xai" }
